--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==4.2"
-pillow = "==10.0.0"
-django-crispy-forms = "==2.0"
 django-allauth = "==0.54.0"
 gunicorn = "==20.1.0"
 django-cors-headers = "*"
 django-jazzmin = "*"
+django = "*"
+python-decouple = "*"
+django-cleanup = "*"
+django-crispy-forms = "*"
+django-ckeditor = "*"
+pillow = "*"
 
 [dev-packages]
 
