--- a/Pipfile
+++ b/Pipfile
@@ -29,7 +29,6 @@ django-storages = "==1.14.6"
 djangorestframework = "==3.16.1"
 drf-yasg = "==1.21.11"
 flake8 = "==7.3.0"
-gunicorn = "==23.0.0"
 inflection = "==0.5.1"
 iniconfig = "==2.3.0"
 isort = "==7.0.0"
@@ -69,6 +68,10 @@ vine = "==5.1.0"
 wcwidth = "==0.2.14"
 whitenoise = "==6.11.0"
 coverage = {extras = ["toml"], version = "==7.13.1"}
+gunicorn = "*"
+portalocker = "*"
+waitress = "*"
+django-admin-sortable2 = "*"
 
 [dev-packages]
 
