--- a/Dockerfile copy
+++ b/Dockerfile copy
@@ -29,11 +29,17 @@ COPY . .
 RUN pipenv requirements > requirements.txt
 RUN pip3 install -r requirements.txt
 
+
 # create static dir
 RUN mkdir -p /usr/src/app/static/ && chmod 755 /usr/src/app/static/
+
+# run Django migrations & collectstatic
+RUN python manage.py migrate
+RUN python manage.py collectstatic --noinput
 
 # expose port
 EXPOSE 8000
 
 # start server with gunicorn
 CMD ["gunicorn", "--chdir", "/usr/src/app", "--access-logfile", "-", "--error-logfile", "-", "--bind", "0.0.0.0:8000", "kunooz.wsgi:application"]
+# CMD ["gunicorn", "--chdir", "/usr/src/app", "--bind", "0.0.0.0:8000", "kunooz.wsgi:application"]
