--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,29 @@ services:
       - django-folder:/s3files
     environment:
       DB_ENGINE: django.db.backends.postgresql
-      DB_NAME: mydatabase
-      DB_USER: myuser
-      DB_PASSWORD: mypassword
-      DB_HOST: kunooz-db  # هنا استخدم اسم الخدمة مباشرة
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: kunooz-db
       DB_PORT: 5432
     depends_on:
       - kunooz-db
 
   kunooz-db:
-    image: postgres:latest
+    image: postgres:17
+    expose:
+      - 5432
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_MAX_CONNECTIONS: 2000
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - postgresql_data:/var/lib/postgresql/data
+    restart: always
+    networks:
+      - db-net
 
 volumes:
-  pgdata:
+  postgresql_data:
   django-folder:
